# CMakeLists.txt
cmake_minimum_required(VERSION 3.10)
project(JsonToTorznab C)

set(CMAKE_C_STANDARD 99)

include(CheckIPOSupported)
check_ipo_supported(RESULT lto_supported OUTPUT lto_error)

if(MSVC)
    add_compile_options(/O2 /arch:AVX2 /W4)
endif()

add_executable(JsonToTorznab main.c)
if(NOT MSVC)
    target_compile_options(JsonToTorznab PRIVATE -O3 -march=haswell -mavx2 -ffast-math -funroll-loops -ftree-vectorize -Wall -Wextra)
endif()
target_link_libraries(JsonToTorznab PRIVATE $<$<NOT:$<BOOL:${MSVC}>>:pthread>)
if(NOT MINGW)
    if(lto_supported)
        message(STATUS "LTO supported, enabling...")
        set_property(TARGET JsonToTorznab PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
    else()
        message(STATUS "LTO not supported: ${lto_error}")
    endif()
else()
    message(STATUS "Skipping LTO on MinGW")
endif()

add_executable(tests tests.c)
if(NOT MSVC)
    target_compile_options(tests PRIVATE -O3 -march=haswell -mavx2 -ffast-math -funroll-loops -ftree-vectorize -Wall -Wextra)
endif()
target_link_libraries(tests PRIVATE $<$<NOT:$<BOOL:${MSVC}>>:pthread>)
if(NOT MINGW)
    if(lto_supported)
        set_property(TARGET tests PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
    endif()
endif()

option(BUILD_X86_32 "Build for 32-bit x86" OFF)
if(BUILD_X86_32)
    add_executable(JsonToTorznab_32bit main.c)
    target_compile_options(JsonToTorznab_32bit PRIVATE -m32)
    if(NOT MINGW)
        if(lto_supported)
            set_property(TARGET JsonToTorznab_32bit PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
        endif()
    endif()
    target_link_libraries(JsonToTorznab_32bit PRIVATE $<$<NOT:$<BOOL:${MSVC}>>:pthread>)
endif()

option(BUILD_ARM32 "Build for 32-bit ARM" OFF)
if(BUILD_ARM32)
    set(CMAKE_SYSTEM_NAME Linux)
    set(CMAKE_SYSTEM_PROCESSOR arm)
    set(CMAKE_C_COMPILER arm-linux-gnueabihf-gcc)
    add_executable(JsonToTorznab_arm32 main.c)
    target_compile_options(JsonToTorznab_arm32 PRIVATE -march=armv7-a -mfpu=neon)
    if(lto_supported)
        set_property(TARGET JsonToTorznab_arm32 PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
    endif()
    target_link_libraries(JsonToTorznab_arm32 PRIVATE pthread)
endif()

option(BUILD_ARM64 "Build for 64-bit ARM" OFF)
if(BUILD_ARM64)
    set(CMAKE_SYSTEM_NAME Linux)
    set(CMAKE_SYSTEM_PROCESSOR aarch64)
    set(CMAKE_C_COMPILER aarch64-linux-gnu-gcc)
    add_executable(JsonToTorznab_arm64 main.c)
    target_compile_options(JsonToTorznab_arm64 PRIVATE -march=armv8-a+sve)
    if(lto_supported)
        set_property(TARGET JsonToTorznab_arm64 PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
    endif()
    target_link_libraries(JsonToTorznab_arm64 PRIVATE pthread)
endif()

option(BUILD_POWER "Build for PowerPC" OFF)
if(BUILD_POWER)
    set(CMAKE_SYSTEM_NAME Linux)
    set(CMAKE_SYSTEM_PROCESSOR ppc64)
    set(CMAKE_C_COMPILER powerpc64le-linux-gnu-gcc)
    add_executable(JsonToTorznab_power main.c)
    target_compile_options(JsonToTorznab_power PRIVATE -mcpu=power7)
    if(lto_supported)
        set_property(TARGET JsonToTorznab_power PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
    endif()
    target_link_libraries(JsonToTorznab_power PRIVATE pthread)
endif()

option(BUILD_RISCV "Build for RISC-V" OFF)
if(BUILD_RISCV)
    set(CMAKE_SYSTEM_NAME Linux)
    set(CMAKE_SYSTEM_PROCESSOR riscv64)
    set(CMAKE_C_COMPILER riscv64-unknown-linux-gnu-gcc)
    add_executable(JsonToTorznab_riscv main.c)
    target_compile_options(JsonToTorznab_riscv PRIVATE -march=rv64gcv -mabi=lp64d)
    if(lto_supported)
        set_property(TARGET JsonToTorznab_riscv PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
    endif()
    target_link_libraries(JsonToTorznab_riscv PRIVATE pthread)
endif()